--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -67,3 +67,15 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "Consolas-Bold";
+  src: url("../fonts/consolab.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/consolab.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("../fonts/consolab.otf") format("opentype"), /* Open Type Font */
+    url("../fonts/consolab.svg") format("svg"), /* Legacy iOS */
+    url("../fonts/consolab.ttf") format("truetype"), /* Safari, Android, iOS */
+    url("../fonts/consolab.woff") format("woff"), /* Modern Browsers */
+    url("../fonts/consolab.woff2") format("woff2"); /* Modern Browsers */
+  font-weight: normal;
+  font-style: normal;
+}
