--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -11,7 +11,7 @@
 	чтобы не сущ. ширин окна браузера при переносе хидера на след. строку,
 	при которых центровка еще не производится, выполним ее раньше - при 910px!
 	*/
-	.container {justify-content: center; } /*центрирование по горизонтали элементов хидера*/
+	.site-header .container {justify-content: center; } /*центрирование по горизонтали элементов хидера*/
 	/*
 	при переносе элементов на нижнюю строку 
 	задняя картинка, текст и кнопки на ней становятся спрятанными под хидером
