--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,11 +493,13 @@ textarea {
 	font-family: Arial;
 	font-size: 14px;
 	width: 100%;
-	height: 34px;
 	border-radius: 5px;
 	border: none;
 }
-input {margin-bottom: 14px; }
+input {
+	margin-bottom: 14px;
+	height: 34px;
+}
 textarea {
 	max-height: 145px;
 	height: 120px;
